WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150645
JITSubGenerator::generateFastPath() does not need to be inlined.
https://bugs.webkit.org/show_bug.cgi?id=150645
Summary
JITSubGenerator::generateFastPath() does not need to be inlined.
Mark Lam
Reported
2015-10-28 16:51:53 PDT
Will move it to a .cpp file.
Attachments
the patch.
(14.00 KB, patch)
2015-10-28 17:06 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2015-10-28 17:06:29 PDT
Created
attachment 264270
[details]
the patch.
Geoffrey Garen
Comment 2
2015-10-28 17:29:11 PDT
Comment on
attachment 264270
[details]
the patch. r=me if it builds
WebKit Commit Bot
Comment 3
2015-10-28 18:19:37 PDT
Comment on
attachment 264270
[details]
the patch. Clearing flags on attachment: 264270 Committed
r191713
: <
http://trac.webkit.org/changeset/191713
>
WebKit Commit Bot
Comment 4
2015-10-28 18:19:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug