JITSubGenerator::generateFastPath() does not need to be inlined. https://bugs.webkit.org/show_bug.cgi?id=150645

Reviewed by Geoffrey Garen.

Moving it to a .cpp file to reduce code size.  Benchmarks shows this to be
perf neutral.

* CMakeLists.txt:
* JavaScriptCore.vcxproj/JavaScriptCore.vcxproj:
* JavaScriptCore.vcxproj/JavaScriptCore.vcxproj.filters:
* JavaScriptCore.xcodeproj/project.pbxproj:
* ftl/FTLCompile.cpp:
* jit/JITSubGenerator.cpp: Added.
(JSC::JITSubGenerator::generateFastPath):
* jit/JITSubGenerator.h:
(JSC::JITSubGenerator::JITSubGenerator):
(JSC::JITSubGenerator::endJumpList):
(JSC::JITSubGenerator::slowPathJumpList):
(JSC::JITSubGenerator::generateFastPath): Deleted.


Canonical link: https://commits.webkit.org/168819@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191713 268f45cc-cd09-0410-ab3c-d52691b4dbfc