Source/JavaScriptCore/jit/JITSubGenerator.h
@@ -26,15 +26,15 @@
 #ifndef JITSubGenerator_h
 #define JITSubGenerator_h
 
+#if ENABLE(JIT)
+
 #include "CCallHelpers.h"
 #include "ResultType.h"
-#include "ScratchRegisterAllocator.h"
 
 namespace JSC {
 
 class JITSubGenerator {
 public:
-
     JITSubGenerator(JSValueRegs result, JSValueRegs left, JSValueRegs right,
         ResultType leftType, ResultType rightType, FPRReg leftFPR, FPRReg rightFPR,
         GPRReg scratchGPR, FPRReg scratchFPR)
@@ -49,61 +49,7 @@ public:
         , m_scratchFPR(scratchFPR)
     { }
 
-    void generateFastPath(CCallHelpers& jit)
-    {
-        ASSERT(m_scratchGPR != InvalidGPRReg);
-        ASSERT(m_scratchGPR != m_left.payloadGPR());
-        ASSERT(m_scratchGPR != m_right.payloadGPR());
-#if USE(JSVALUE32_64)
-        ASSERT(m_scratchGPR != m_left.tagGPR());
-        ASSERT(m_scratchGPR != m_right.tagGPR());
-        ASSERT(m_scratchFPR != InvalidFPRReg);
-#endif
-        CCallHelpers::Jump leftNotInt = jit.branchIfNotInt32(m_left);
-        CCallHelpers::Jump rightNotInt = jit.branchIfNotInt32(m_right);
-
-        jit.move(m_left.payloadGPR(), m_scratchGPR);
-        m_slowPathJumpList.append(
-            jit.branchSub32(CCallHelpers::Overflow, m_right.payloadGPR(), m_scratchGPR));
-
-        jit.boxInt32(m_scratchGPR, m_result);
-
-        m_endJumpList.append(jit.jump());
-
-        if (!jit.supportsFloatingPoint()) {
-            m_slowPathJumpList.append(leftNotInt);
-            m_slowPathJumpList.append(rightNotInt);
-            return;
-        }
-
-        leftNotInt.link(&jit);
-        if (!m_leftType.definitelyIsNumber())
-            m_slowPathJumpList.append(jit.branchIfNotNumber(m_left, m_scratchGPR));
-        if (!m_rightType.definitelyIsNumber())
-            m_slowPathJumpList.append(jit.branchIfNotNumber(m_right, m_scratchGPR));
-
-        jit.unboxDoubleNonDestructive(m_left, m_leftFPR, m_scratchGPR, m_scratchFPR);
-        CCallHelpers::Jump rightIsDouble = jit.branchIfNotInt32(m_right);
-
-        jit.convertInt32ToDouble(m_right.payloadGPR(), m_rightFPR);
-        CCallHelpers::Jump rightWasInteger = jit.jump();
-
-        rightNotInt.link(&jit);
-        if (!m_rightType.definitelyIsNumber())
-            m_slowPathJumpList.append(jit.branchIfNotNumber(m_right, m_scratchGPR));
-
-        jit.convertInt32ToDouble(m_left.payloadGPR(), m_leftFPR);
-
-        rightIsDouble.link(&jit);
-        jit.unboxDoubleNonDestructive(m_right, m_rightFPR, m_scratchGPR, m_scratchFPR);
-
-        rightWasInteger.link(&jit);
-
-        jit.subDouble(m_rightFPR, m_leftFPR);
-        jit.boxDouble(m_leftFPR, m_result);
-
-        m_endJumpList.append(jit.jump());
-    }
+    void generateFastPath(CCallHelpers&);
 
     CCallHelpers::JumpList endJumpList() { return m_endJumpList; }
     CCallHelpers::JumpList slowPathJumpList() { return m_slowPathJumpList; }
@@ -124,5 +70,7 @@ private:
 };
 
 } // namespace JSC
+
+#endif // ENABLE(JIT)
 
 #endif // JITSubGenerator_h
